# slop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  slop.spec
.github/workflows/: build-rpm.yml
packaging/: README.md
packaging/rpm/: slop.spec
slop/: __init__.py  anonymize.py  app.py  main.py  models.py  models_cluster.py  requirements.txt  utils.py
slop/models/: __init__.py  job.py  jobs.py
slop/slurm/: __init__.py  adaptive_sacct.py  adaptive_sacct_fetcher.py  cluster_fetcher.py  fetcher.py  history_fetcher.py  job_cache.py  job_fetcher.py  load_governor.py  priority_config.py  sacct_fetcher.py  sdiag_fetcher.py  sprio_fetcher.py  sreport_fetcher.py  state.py
slop/ui/: constants.py  help.py  history_fetcher.py  history_view.py  job_detail_sacct.py  myjobsview.py  queue_view.py  report_view.py  search_overlay.py  state_style.py  style.py  tab_completion.py  view_manager.py  views.py  widgets.py
slop/ui/overlays/: __init__.py  confirm_exit.py  halted_modal.py  job_info.py  search.py
slop/ui/views/: __init__.py  accounts.py  base.py  cluster.py  dashboard.py  jobs.py  my_jobs.py  partitions.py  pending_list.py  queue.py  queue_helpers.py  report.py  report_stats.py  scheduler.py  splash.py  states.py  users.py
